sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__ungiven12/errors.duarouter
Error: Missing length definition in lane '1_1'.
Quitting (on error).
